split ng2 time-to-main from bootstrap; measure warm-up

--- a/web/giant.html
+++ b/web/giant.html
@@ -6,7 +6,7 @@
     <title>Giant app benchmark</title>
   </head>
   <body>
-    <giant-app></giant-app>
+    <giant-app-wrapper></giant-app-wrapper>
 
     <script>
         let beforeMain = performance.now();
