use styling that makes nesting in giant app apparent

--- a/web/giant.html
+++ b/web/giant.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Giant app benchmark</title>
+    <link href="main.css" rel="stylesheet">
   </head>
   <body>
     <giant-app-wrapper></giant-app-wrapper>
