--- a/main.wasm.html
+++ b/main.wasm.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>WebAssembly Demo</title>
-    <link href="main.css" rel="stylesheet">
+    <link href="web/main.css" rel="stylesheet">
 </head>
 <body>
 <div id="host"></div>
