--- a/others/ng2ts/giant/src/index.html
+++ b/others/ng2ts/giant/src/index.html
@@ -6,6 +6,14 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script>
+      window.beforeMain = performance.now();
+
+      function printStats() {
+          console.log(document.querySelectorAll('*').length, 'elements');
+          console.log(document.querySelectorAll('*[widget]').length, 'widgets');
+      }
+  </script>
 </head>
 <body>
   <app-root></app-root>
