--- a/web/giant.html
+++ b/web/giant.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Giant app benchmark</title>
+    <title>AngularDart giant app benchmark</title>
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
