one script to build them all

--- a/giant.wasm.html
+++ b/giant.wasm.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>WebAssembly Demo</title>
-    <link href="web/main.css" rel="stylesheet">
+    <link href="../../main.css" rel="stylesheet">
 </head>
 <body>
 <div id="host"></div>
 
-<script type="application/javascript" src="sync.js"></script>
+<script type="application/javascript" src="../../sync.js"></script>
 <script type="application/javascript">
     loadApp('giant');
 </script>
